k8-byexamples-ingress-httpauth/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-system
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: $SERVICE_NAME
          servicePort: $SERVICE_PORT
      - path: /kibana
        backend:
          serviceName: $SERVICE_NAME
          servicePort: $SERVICE_PORT
